src/objects/CPQ_CLLI_Master__c.object
<CustomObject>
    <description>De-normalized table to capture CLLI Master data.</description>
    <fields>
        <fullName>CPQ_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True indicates that the CLLI Code is active and being used</description>
        <inlineHelpText>True indicates that the CLLI Code is active and being used</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_CLLI_Code__c</fullName>
        <description>Reference to the CLLI code that the sales rep can search by</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the CLLI code that the sales rep can search by</inlineHelpText>
        <label>CLLI Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_CLLI_Key__c</fullName>
        <description>Reference to the CLLI key that is mapped to CLLI code and is sent to SAP</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the CLLI key that is mapped to CLLI code and is sent to SAP</inlineHelpText>
        <label>Base/Control</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_CLLI_Site_City__c</fullName>
        <description>Reference to the CLLI city that is mapped to CLLI name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the CLLI city that is mapped to CLLI name</inlineHelpText>
        <label>CLLI Site City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_CLLI_Site_Country_Code__c</fullName>
        <description>Reference to the CLLI country code that is mapped to CLLI name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the CLLI country code that is mapped to CLLI name</inlineHelpText>
        <label>CLLI Site Country Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_CLLI_Site_Name__c</fullName>
        <description>Reference to the CLLI name that is mapped to CLLI code</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the CLLI name that is mapped to CLLI code</inlineHelpText>
        <label>CLLI Site Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_CLLI_Site_State_Code__c</fullName>
        <description>Reference to the CLLI state code that is mapped to CLLI state</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the CLLI state code that is mapped to CLLI state</inlineHelpText>
        <label>CLLI Site State Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_CLLI_Site_State__c</fullName>
        <description>Reference to the CLLI state that is mapped to CLLI name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the CLLI state that is mapped to CLLI name</inlineHelpText>
        <label>CLLI Site State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_CLLI_Site_Street__c</fullName>
        <description>Reference to the CLLI street that is mapped to CLLI name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the CLLI street that is mapped to CLLI name</inlineHelpText>
        <label>CLLI Site Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_CLLI_Site_Zip__c</fullName>
        <description>Reference to the CLLI zip that is mapped to CLLI city and state</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference to the CLLI zip that is mapped to CLLI city and state</inlineHelpText>
        <label>CLLI Site Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CLLI Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CPQ_CLLI_Code__c</columns>
        <columns>CPQ_CLLI_Key__c</columns>
        <columns>CPQ_CLLI_Site_City__c</columns>
        <columns>CPQ_CLLI_Site_Country_Code__c</columns>
        <columns>CPQ_CLLI_Site_Name__c</columns>
        <columns>CPQ_CLLI_Site_State__c</columns>
        <columns>CPQ_CLLI_Site_State_Code__c</columns>
        <columns>CPQ_CLLI_Site_Street__c</columns>
        <columns>CPQ_CLLI_Site_Zip__c</columns>
        <columns>CPQ_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CLLI-{00000000}</displayFormat>
        <label>CLLI ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CLLI Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>